force-app/main/default/objects/custom_create78__c/custom_create78__c.object-meta.xml
<CustomObject>
    <label>Custom created object78</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects78</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>