force-app/main/default/objects/custom_create78__c/fields/custom_create_78field514__c.field-meta.xml
<CustomField>
    <fullName>custom_create_78field514__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 78field514</label>
    <type>Checkbox</type>
</CustomField>