force-app/main/default/objects/custom_create78__c/fields/custom_create_78field530__c.field-meta.xml
<CustomField>
    <fullName>custom_create_78field530__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 78field530</label>
    <type>Checkbox</type>
</CustomField>